2008-09-25  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add test for non-rectangular array.

2008-09-23  Jonathan Pryor  <jpryor@novell.com>

	* JaggedArrayTest.cs, RectangularArrayTest.cs: Added; tests for
	  .Rows() extension methods.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add #region blocks for doc usage; add exception
	  check for .SplitAt(); update tests for .ToTuple().

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs, ObjectTest.cs: Add #regions for doc usage.

2008-09-22  Jonathan Pryor  <jpryor@novell.com>

	* EitherTest.cs: Add test for Either.TryParse().

2008-09-20  Jonathan Pryor  <jpryor@novell.com>

	* EitherTest.cs: Added; tests for Either<...>.

2008-09-18  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerableTest.cs: Add #regions for doc usage.

2008-09-17  Jonathan Pryor  <jpryor@novell.com>

	* MaybeTest.cs: Add #regions for doc usage; Add/update tests due to
	  s/SelectMany/Select/ method rename.

2008-09-16  Jonathan Pryor  <jpryor@novell.com>

	* SequenceTest.cs: Add #regions for use by documentation.

2008-09-15  Jonathan Pryor  <jpryor@novell.com>

	* StringTest.cs: Add #regions and "prettify" the tests so that the tests can
	  be included verbatim into the documentation.

2008-09-14  Jonathan Pryor  <jpryor@novell.com>

	* ConsTest.cs: Remove, as Cons<T> was removed.

2008-09-09  Jonathan Pryor  <jpryor@novell.com>

	* TextReaderTest.cs: Add tests for .Words(TextReaderRocksOptions).

2008-09-09  Jonathan Pryor  <jpryor@novell.com>

	* MaybeTest.cs: Remove Maybe.Create(); test Maybe.TryParse().
	* NullableTest.cs: Remove .ToNullable(); test .Just(), .ToMaybe().
	* ObjectTest.cs: Cope w/ Maybe changes; test .Just(), .ToMaybe().

2008-09-08  Jonathan Pryor  <jpryor@novell.com>

	* TextReaderRocks.cs: Add tests for new .Lines(TextReaderLineOptions)
	  overload.

2008-09-07  Jonathan Pryor  <jpryor@novell.com>

	* ConsTest.cs: Added; Tests for Cons<T>.