@@ -1,6 +1,13 @@
 2008-09-25  Jonathan Pryor  <jpryor@novell.com>
 
+	* TextReaderTest.cs: Add check that .Words() doesn't consume the
+	  entire TextReader.
+
+2008-09-25  Jonathan Pryor  <jpryor@novell.com>
+
 	* IEnumerableTest.cs: Add test for non-rectangular array.
+	* TextReaderTest.cs: Add check that .Words() doesn't consume the
+	  entire TextReader.
 
 2008-09-23  Jonathan Pryor  <jpryor@novell.com>
 
